api 호출 후 DB저장 기능 추가